dig-src/main/default/objects/Comms_Preference__c/Comms_Preference__c.object-meta.xml
<CustomObject>
    <label>Comms Preference</label>
    <nameField>
        <displayFormat>PREF-{0000000}</displayFormat>
        <label>Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comms Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>