dig-src/main/default/objects/Comms_Preference__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comms Preferences</relationshipLabel>
    <relationshipName>Comms_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>