dig-src/main/default/objects/Comms_Preference__c/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>