dig-src/main/default/objects/Comms_Preference__c/fields/Email_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Email_Allowed__c</fullName>
    <label>Email Allowed</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>