dig-src/main/default/objects/Comms_Preference__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>asl</fullName>
                <label>ASL (Preference)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>