dig-src/main/default/objects/Comms_Preference__c/fields/Phone_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Phone_Allowed__c</fullName>
    <label>Phone Allowed</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>