dig-src/main/default/objects/Comms_Preference__c/fields/SMS_Allowed__c.field-meta.xml
<CustomField>
    <fullName>SMS_Allowed__c</fullName>
    <label>SMS Allowed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>